--- a/src/HotelWidget/UI/DateRange/DateRange.scss
+++ b/src/HotelWidget/UI/DateRange/DateRange.scss
@@ -1,1 +1,23 @@
 @import '~antd/dist/antd.css';
+.dataRange {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 10px;
+    .ant-picker {
+        display: flex;
+        justify-content: center;
+        border-radius: 5px;
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        background: #fff;
+        &-input {
+            input {
+                text-align: center;
+                color: #888282;
+            }
+            
+        }
+    }
+}
