--- a/src/HotelWidget/BookingItem/BookingItem.scss
+++ b/src/HotelWidget/BookingItem/BookingItem.scss
@@ -1,17 +1,47 @@
+@import '../base.scss';
+
 .item {
     display: flex;
     padding: 16px;
     margin: 16px 0;
-   // border: 1px solid #c6c6c6;
-   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-   background: #fff;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    background: $white-color;
     border-radius: 3px;
-    img {
-        display: block;
-        max-width: 200px;
-        border-radius: 3px;
+    .img {
+       width: 45%;
+        @include f-centered();
+            img {
+                width: 100%;
+                display: block;
+                border-radius: 3px;
+            }
+    }
+    
+    &__title {
+        font-weight: 700;
+        font-size: 17px;
+        color: $main-color;
     }
     &__descr {
-        padding: 10px;
+        padding: 0 10px 10px 10px;
+        font-size: 12px;
+    }
+    &__price {
+        font-weight: 700;
+        font-size: 20px;
+        color: $main-color;
+    }
+}
+
+@media (max-width:435px) {
+    .item {
+        flex-direction: column;
+        @include f-centered();
+        .img {
+            width: 100%;
+        }
+        &__descr {
+            width: 100%;
+        }
     }
 }
