--- a/src/HotelWidget/UI/DateRange/DateRange.scss
+++ b/src/HotelWidget/UI/DateRange/DateRange.scss
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+
 .dataRange {
     width: 100%;
     display: flex;
@@ -17,7 +18,25 @@
                 text-align: center;
                 color: #888282;
             }
-            
+        }
+    }
+}
+
+@media (max-width:435px) {
+    .dataRange {
+        .ant-picker {
+            display: flex;
+            justify-content: center;
+            border-radius: 5px;
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            background: #fff;
+            &-input {
+                input {
+                    font-size: 14px;
+                    text-align: center;
+                    color: #888282;
+                }
+            }
         }
     }
 }
