--- a/src/HotelWidget/UI/Input/Input.scss
+++ b/src/HotelWidget/UI/Input/Input.scss
@@ -1,3 +1,5 @@
+@import '../../base.scss';
+
 .wrapper {
     position: relative;
     width: 40%;
@@ -10,7 +12,7 @@
         left: 20px;
         font-size: 13px;
         font-weight: 700;
-        color: #888282;
+        color: $main-color;
     }
 }
 
@@ -20,12 +22,11 @@
         height: 40px;
         font-size: 20px;
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-        background: #fff;
+        background: $white-color;
         border-radius: 5px;
         outline: none;
         border: 0;
         color: #888282;
+        padding: 5px 10px;
     }
-    
-    
 }
